# chemstack

./: .gitignore  Makefile  PLAN_legacy_removal_completion.md  PLAN_linux_path_unification.md  PLAN_result_organizer.md  PLAN_telegram_monitoring.md  README.md  constraints-dev.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: chemstack.yaml.example  orca_auto.yaml  orca_auto.yaml.example
core/: __init__.py  admission_store.py  attempt_engine.py  attempt_resume.py  cancellation.py  cli.py  completion_rules.py  config.py  config_validation.py  dft_discovery.py  dft_index.py  dft_monitor.py  dft_query.py  disk_monitor.py  geometry_checker.py  inp_rewriter.py  job_locations.py  json_logger.py  launcher.py  lock_utils.py  molecule_key.py  notifier.py  notifier_events.py  notifier_runtime.py  notifier_state.py  orca_parser.py  orca_runner.py  orchestrator.py  organize_index.py  out_analyzer.py  pathing.py  process_tracking.py  queue_store.py  queue_worker.py  result_cleaner.py  result_organizer.py  run_snapshot.py  state_machine.py  state_store.py  statuses.py  (+5 more)
core/commands/: _helpers.py  check.py  cleanup.py  init.py  list_runs.py  monitor.py  organize.py  queue.py  run_inp.py  run_job.py  summary.py
core/runtime/: __init__.py  run_lock.py  worker_job.py
docs/: CODE_REVIEW_REPORT.md  DEVELOPMENT.md  MCP_WORKFLOW_MIGRATION_PLAN.md  PLAN.md  PLAN_refactoring.md  QUEUE_ADMISSION_LOCK.md  QUICKSTART.md  REFACTOR_PLAN.md  REFERENCE.md
docs/archive/: MCP_WORKFLOW_MIGRATION_PLAN.md  ORCA_AUTO_BASE_MONOREPO_ABSORPTION_PLAN_2026-04-20.md  README.md
orca_auto/: __init__.py  _job_location_index_fallback.py  cli.py  job_locations.py  state.py  tracking.py
orca_auto/commands/: __init__.py  _helpers.py  init.py  list_runs.py  monitor.py  organize.py  queue.py  run_inp.py  run_job.py  summary.py
orca_auto/runtime/: run_lock.py  worker_job.py
scripts/: audit_input_path_literals.py  audit_structural_tests.sh  bootstrap_wsl.sh  check.sh  clean_artifacts.sh  cron_cleanup.sh  cron_dft_monitor.sh  cron_dft_summary.sh  cron_organize.sh  dft_progress_report.py  install_cron.sh  install_dft_summary_cron.sh  preflight_check.sh  start_bot.sh  validate_runtime_config.py
scripts/flow/: chem_flow_worker_service.sh  run_direct_smoke_nightly.sh  run_direct_smoke_regression.py
src/chemstack/: __init__.py  __main__.py  _version.py  activity_labels.py  activity_presenter.py  activity_rendering.py  activity_view.py  cli.py  cli_argparse.py  cli_common.py  cli_deps.py  cli_errors.py  cli_handlers.py  cli_monitor.py  cli_parser_commands.py  cli_parser_common.py  cli_parser_queue.py  cli_parser_systemd.py  cli_parsers.py  cli_queue.py  cli_run_dir.py  cli_style.py  cli_summary.py  cli_systemd.py  cli_systemd_apply.py  cli_systemd_status.py  cli_worker_conflicts.py  cli_worker_specs.py  cli_workers.py  summary.py  systemd_plan.py  terminal_table.py
src/orca_auto/: _version.py  activity_labels.py  activity_presenter.py  activity_rendering.py  activity_view.py  cli.py  cli_argparse.py  cli_common.py  cli_errors.py  cli_handlers.py  cli_parser_commands.py  cli_parser_common.py  cli_parser_queue.py  cli_parser_systemd.py  cli_parsers.py  cli_queue.py  cli_style.py  cli_systemd.py  cli_systemd_apply.py  cli_systemd_status.py  cli_worker_conflicts.py  cli_worker_specs.py  cli_workers.py  systemd_plan.py
systemd/: README.md  chemstack-bot@.service  chemstack-crest-queue-worker@.service  chemstack-flow-worker.env.example  chemstack-flow-workflow-worker.service  chemstack-orca-queue-worker@.service  chemstack-queue-worker@.service  chemstack-runtime@.target  chemstack-summary@.service  chemstack-summary@.timer  chemstack-xtb-queue-worker@.service  orca-auto-queue-worker@.service  orca_auto-bot@.service  orca_auto-queue-worker@.service  orca_auto-runtime@.target
tests/: __init__.py  engine_artifact_helpers.py  engine_process_helpers.py  flow_factories.py  process_helpers.py  queue_worker_helpers.py  test_activity_presenter.py  test_activity_rendering.py  test_activity_view.py  test_admission_store.py  test_attempt_engine.py  test_attempt_reporting.py  test_attempt_resume.py  test_attempt_resume_helpers.py  test_cancellation.py  test_check_cli.py  test_chemstack_cli.py  test_chemstack_cli_queue.py  test_chemstack_cli_run_dir.py  test_chemstack_cli_run_dir_summary.py  test_chemstack_cli_workers.py  test_cleanup_cli.py  test_cli.py  test_cli_argparse.py  test_cli_facade_delegates.py  test_cli_style_and_errors.py  test_cli_systemd.py  test_combined_summary.py  test_command_helpers.py  test_completion_rules.py  test_completion_rules_helpers.py  test_config_validation.py  test_dft_discovery.py  test_dft_discovery_helpers.py  test_dft_index.py  test_dft_monitor.py  test_dft_monitor_helpers.py  test_dft_progress_report.py  test_disk_monitor.py  test_geometry_checker.py  (+70 more)
tests/core/: conftest.py  test_admission_store.py  test_child_execution.py  test_config_files.py  test_config_schema.py  test_engine_admission.py  test_engine_artifact_schema.py  test_engine_child.py  test_engine_definitions_contract.py  test_engine_execution.py  test_engine_list_command.py  test_engine_notifications.py  test_engine_reindex_command.py  test_engine_runtime.py  test_facade.py  test_indexing_roots.py  test_indexing_store.py  test_lock.py  test_organize_command.py  test_paths_validation.py  test_persistence.py  test_process_lock.py  test_process_utils.py  test_queue_command_helpers.py  test_queue_store.py  test_queue_worker_common.py  test_run_dir_command.py  test_scaffold.py  test_telegram.py  test_workflow_paths.py
tests/crest/: __init__.py  test_cli_init_run_dir.py  test_cli_remaining_branches.py  test_command_helpers.py  test_config_and_state.py  test_init.py  test_job_locations.py  test_notifications.py  test_organize_edges.py  test_organize_reindex_summary.py  test_queue_admission.py  test_queue_and_list_commands.py  test_queue_lifecycle.py  test_queue_runtime_execution.py  test_queue_worker.py  test_runner.py  test_runner_edges.py  test_runner_remaining_branches.py  test_worker_child.py  test_worker_context.py  (+2 more)
(+931 files in other folders)
