[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemstack"
version = "0.1.0"
description = "ChemStack monorepo for ORCA, xTB, CREST, and workflow automation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Daehyup Sohn" },
]
keywords = [
    "orca",
    "dft",
    "computational-chemistry",
    "workflow-automation",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/dhsohn/chemstack"
Repository = "https://github.com/dhsohn/chemstack"
Issues = "https://github.com/dhsohn/chemstack/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
chemstack = "chemstack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chemstack*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src/chemstack", "tests"]
mypy_path = "src"
pretty = true
show_error_codes = true
warn_unused_configs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "chemstack.core.app_ids",
    "chemstack.core.activity_icons",
    "chemstack.core.admission.persistence",
    "chemstack.core.admission.records",
    "chemstack.core.artifacts",
    "chemstack.core.config.files",
    "chemstack.core.config.schema",
    "chemstack.core.engines.artifacts",
    "chemstack.core.indexing.engine_records",
    "chemstack.core.indexing.engines",
    "chemstack.core.indexing.location",
    "chemstack.core.indexing.text",
    "chemstack.core.notifications.engine_requests",
    "chemstack.core.notifications.engine_validation",
    "chemstack.core.notifications.telegram_config",
    "chemstack.core.notifications.telegram_format",
    "chemstack.core.paths",
    "chemstack.core.paths.*",
    "chemstack.core.queue.cancellable",
    "chemstack.core.queue.metadata",
    "chemstack.core.queue.persistence",
    "chemstack.core.queue.processes",
    "chemstack.core.queue.resource_requests",
    "chemstack.core.queue.types",
    "chemstack.core.queue.worker_models",
    "chemstack.core.queue.worker_signals",
    "chemstack.core.statuses",
    "chemstack.core.utils.coercion",
    "chemstack.core.utils.lock",
    "chemstack.core.utils.persistence",
    "chemstack.core.utils.process",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/chemstack"]

[tool.coverage.report]
fail_under = 80
show_missing = true
