[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orca_auto"
version = "0.1.0"
description = "orca_auto monorepo for ORCA, xTB, CREST, and workflow automation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Daehyup Sohn" },
]
keywords = [
    "orca",
    "dft",
    "computational-chemistry",
    "workflow-automation",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/dhsohn/orca_auto"
Repository = "https://github.com/dhsohn/orca_auto"
Issues = "https://github.com/dhsohn/orca_auto/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
orca_auto = "orca_auto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["orca_auto*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src/orca_auto", "tests"]
mypy_path = "src"
pretty = true
show_error_codes = true
warn_unused_configs = true
explicit_package_bases = true

# Strict-style mypy options are intentionally staged here for modules that have
# already been hardened. Keep the top-level mypy config broadly non-strict until
# the full src+tests tree passes the equivalent strict flags.
[[tool.mypy.overrides]]
module = [
    "orca_auto.core.app_ids",
    "orca_auto.core.activity_icons",
    "orca_auto.core.admission.persistence",
    "orca_auto.core.admission.records",
    "orca_auto.core.artifacts",
    "orca_auto.core.config.files",
    "orca_auto.core.config.schema",
    "orca_auto.core.engines.artifacts",
    "orca_auto.core.indexing.engine_records",
    "orca_auto.core.indexing.engines",
    "orca_auto.core.indexing.location",
    "orca_auto.core.indexing.text",
    "orca_auto.core.notifications.engine_requests",
    "orca_auto.core.notifications.engine_validation",
    "orca_auto.core.notifications.telegram_config",
    "orca_auto.core.notifications.telegram_format",
    "orca_auto.core.paths",
    "orca_auto.core.paths.*",
    "orca_auto.core.queue.cancellable",
    "orca_auto.core.queue.metadata",
    "orca_auto.core.queue.persistence",
    "orca_auto.core.queue.processes",
    "orca_auto.core.queue.resource_requests",
    "orca_auto.core.queue.types",
    "orca_auto.core.queue.worker_models",
    "orca_auto.core.queue.worker_signals",
    "orca_auto.core.statuses",
    "orca_auto.core.utils.coercion",
    "orca_auto.core.utils.lock",
    "orca_auto.core.utils.persistence",
    "orca_auto.core.utils.process",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/orca_auto"]

[tool.coverage.report]
fail_under = 80
show_missing = true
